--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
 <body>
 <div class="jumbotron jumbotron-fluid">
     <div class="container"></div>
-    <h2>DevianceNet<br></h2>
-<!--            <p class="abstract">An interpretable, data-efficient, and scalable neural scene representation.</p>-->
+    <h2>DevianceNet:<br>Learning to Predict Deviance<br>from A Large-scale Geo-tagged Dataset<br></h2>
+<!--            <p class="abstract">Predicting deviance via visual attributes</p>-->
     <hr>
     <div class="btn-group" role="group" aria-label="Top menu">
+        <a class="btn btn-primary" href="https://https://deviance-project.github.io/">Paper</a>
         <a class="btn btn-primary" href="https://drive.google.com/drive/folders/12tpfN9lBsoIvHJl_tHRz_C3pbJoEE33X?usp=sharing">Dataset</a>
+        <a class="btn btn-primary" href="https://https://deviance-project.github.io/">Code</a>
         </div>
 </div>
 
