--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 <div class="jumbotron jumbotron-fluid">
     <div class="container"></div>
-    <h2>DevianceNet:<br>Learning to Predict Deviance<br>from A Large-scale Geo-tagged Dataset<br></h2>
+    <h2>DevianceNet: Learning to Predict Deviance<br>from A Large-scale Geo-tagged Dataset<br></h2>
 <!--            <p class="abstract">Predicting deviance via visual attributes</p>-->
     <hr>
     <div class="btn-group" role="group" aria-label="Top menu">
