--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 <!--            <p class="abstract">Predicting deviance via visual attributes</p>-->
     <hr>
     <div class="btn-group" role="group" aria-label="Top menu">
-        <a class="btn btn-primary" href="https://https://deviance-project.github.io/">Paper</a>
+        <a class="btn btn-primary" href="https://deviance-project.github.io/">Paper</a>
         <a class="btn btn-primary" href="https://drive.google.com/drive/folders/12tpfN9lBsoIvHJl_tHRz_C3pbJoEE33X?usp=sharing">Dataset</a>
-        <a class="btn btn-primary" href="https://https://deviance-project.github.io/">Code</a>
+        <a class="btn btn-primary" href="https://deviance-project.github.io/">Code</a>
         </div>
 </div>
 
