--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 
 <div class="container">
     <div class="section">
-        <div class="vcontainer" style="width: 750px;">
-            <iframe class='video' width="25%" src="https://user-images.githubusercontent.com/93658342/140477709-7ab2a843-3986-4dd7-ad1b-e1f2e8bbfe8a.mp4" frameborder="0"
+        <div class="vcontainer">
+            <iframe class='video' width="25%" height="25%" src="https://user-images.githubusercontent.com/93658342/140477709-7ab2a843-3986-4dd7-ad1b-e1f2e8bbfe8a.mp4" frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
         </div>
