--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <div class="container">
     <div class="section">
-        <div class="vcontainer" style="width: 375px; margin: 310px;">
+        <div class="vcontainer" style="width: 375px; height: 200px margin: 310px; auto;">
             <iframe class='video' src="https://user-images.githubusercontent.com/93658342/140477709-7ab2a843-3986-4dd7-ad1b-e1f2e8bbfe8a.mp4" frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
