--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="OQgUokTjYO-eJWf9PtyexQp3L5l6zeByhd3DSZW7C3A" />
     <meta name="description"
           content="">
     <meta name="author" content="Vincent Sitzmann,
