--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="OQgUokTjYO-eJWf9PtyexQp3L5l6zeByhd3DSZW7C3A" />
+    <meta name="title"
+          content="Deviance net">
     <meta name="description"
-          content="">
-    <meta name="author" content="Vincent Sitzmann,
-                                Julien Martel,
-                                Alex Bergman,
-                                David Lindell,
-								Gordon Wetzstein">
+          content="Deviance net, AAAI, AAAI 2022, deviance-project, deviance project, Deviance dataset, Dataset, under review paper">
+    <meta name="keywords"
+          content="DevianceNet, Deviance net, AAAI, AAAI 2022, deviance-project, deviance project, Deviance dataset, Dataset, under review">
+    <meta name="author" content="">
 
     <title>DevianceNet</title>
     <!-- Bootstrap core CSS -->
