--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="description"
           content="Deviance net, AAAI, AAAI 2022, deviance-project, deviance project, Deviance dataset, Dataset, under review paper">
     <meta name="keywords"
-          content="DevianceNet, Deviance net, AAAI, AAAI 2022, deviance-project, deviance project, Deviance dataset, Dataset, under review">
+          content="DevianceNet, Deviance net, AAAI, AAAI 2022, deviance-project, deviance project, Deviance dataset, Dataset, under review, git, github">
     <meta name="author" content="">
 
     <title>DevianceNet</title>
