--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <!-- Custom styles for this template -->
     <link href="offcanvas.css" rel="stylesheet">
     <!--    <link rel="icon" href="img/favicon.gif" type="image/gif">-->
+
 </head>
 
 <body>
@@ -48,25 +49,29 @@
 	
     <div class="section">
         <h2>Supplementary Video</h2>
-	
+    <hr>
         <div class="vcontainer">
             <iframe class='video' src="https://user-images.githubusercontent.com/93658342/140477709-7ab2a843-3986-4dd7-ad1b-e1f2e8bbfe8a.mp4" frameborder="0"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
         </div>
     </div>
+    <hr>
 	
     <div class="section">
         <h2>Dataset Examples</h2>
-		<div class="col-sm-3">
-			<img src='assets/images/1_Dataset Examples.png' class='img-dataset-example'>
+    <hr>
+		<div class="row align-items-center">
+			<img src='assets/images/1_Dataset Examples.png' style="width:100%">
 		</div>
     </div>
+    <hr>
 	
     <div class="section">
         <h2>Deviant Places Examples</h2>
-		<div class="col-sm-3">
-			<img src='assets/images/2_Deviant Places Examples.png' class='img-deviant-example'>
+    <hr>
+		<div class="row align-items-center">
+			<img src='assets/images/2_Deviant Places Examples.png' style="width:100%">
 		</div>
     </div>
     <hr>
