--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <h2>Deviant Places Examples</h2>
     <hr>
 		<div class="row align-items-center">
-			<img src='assets/images/2_Deviant Places Examples.png' style="width:100%">
+			<img src='assets/images/2_Deviant Places Examples.png' style="width:70%; margin:0% 15% 0% 15%">
 		</div>
     </div>
     <hr>
