--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
           content="Deviance net, AAAI, AAAI 2022, deviance-project, deviance project, Deviance dataset, Dataset, under review paper">
     <meta name="keywords"
           content="DevianceNet, Deviance net, AAAI, AAAI 2022, deviance-project, deviance project, Deviance dataset, Dataset, under review, git, github">
-    <meta name="author" content="">
+    <meta name="author" content="Jinhwi Park*, Youngjae Park*, Junoh Lee and Haegon Jeon**">
 
     <title>DevianceNet</title>
     <!-- Bootstrap core CSS -->
@@ -28,6 +28,10 @@
     <h2>DevianceNet: Learning to Predict Deviance<br>from A Large-scale Geo-tagged Dataset<br></h2>
 <!--            <p class="abstract">Predicting deviance via visual attributes</p>-->
     <hr>
+    <p class="authors">
+        Jinhwi Park*, Youngjae Park*, Junoh Lee and 
+        <a href="https://sites.google.com/site/hgjeoncv/">Haegon Jeon**</a>
+	</p>
     <div class="btn-group" role="group" aria-label="Top menu">
         <a class="btn btn-primary" href="https://github.com/Deviance-Project/AAAI2022">Paper</a>
         <a class="btn btn-primary" href="https://drive.google.com/drive/folders/1ERFaC_6IseQgXDvs5_ep5at56b-b7Vmg?usp=sharing">Dataset</a>
