--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="keywords"
           content="DevianceNet, Deviance net, AAAI, AAAI 2022, deviance-project, deviance project, Deviance dataset, Dataset, under review, git, github">
     <meta name="author" content="Jinhwi Park*, Youngjae Park*, Junoh Lee and Haegon Jeon**">
+    <meta name="google-site-verification" content="OQgUokTjYO-eJWf9PtyexQp3L5l6zeByhd3DSZW7C3A" />
 
     <title>DevianceNet</title>
     <!-- Bootstrap core CSS -->
